@@ -6,13 +6,6 @@
    "source": [
     "# Catalog Validation\n",
     "\n",
-    "\n",
-    "<div class=\"alert alert-warning\">\n",
-    "\n",
-    "**Warning**: We will be moving most of this functionality to obspy as described in [this proposal](https://github.com/obspy/obspy/issues/2154). \n",
-    "\n",
-    "</div>\n",
-    "\n",
     "[Obspy's event representation](https://docs.obspy.org/packages/obspy.core.html#event-metadata) is based on the [FDSN](http://www.fdsn.org/) [QuakeML standard](https://quake.ethz.ch/quakeml/), which is very comprehensive, and arguably the best standard available. However, It can be a bit difficult to work with the `Catalog` object (and friends) for a few reasons:\n",
     "\n",
     "    1. Often the desired data is deeply nested and hard to aggregate\n",
@@ -21,7 +14,7 @@
     "    \n",
     "    3. Preferred objects are often not set\n",
     "    \n",
-    "ObsPlus tries to solve all of these problems. The first is addressed by the [DataFrame Extractor](../utils/dataframeextractor.ipynb). The second and third are addressed by a collection of catalog validators that attempt to ensure all resource_ids point to the correct objects, preferred objects are set, as well as preform other sanity checks. The validation function in ObsPlus is a bit opinionated and was built specifically for the NIOSH flavor of seismic event storage, but you may still find it useful. In the future we hope to make it a bit more customizable and move it to Obspy proper."
+    "ObsPlus tries to solve all of these problems. The first is addressed by the [DataFrame Extractor](../utils/dataframeextractor.ipynb). The second and third are addressed by a collection of catalog validators that attempt to ensure all resource_ids point to the correct objects, preferred objects are set, as well as preform other sanity checks. The validation function in ObsPlus is a bit opinionated and was built specifically for the NIOSH flavor of seismic event storage, but you may still find it useful. Additionally, you can create your own validation namespace and define validators for your own data/schema as described by the [validators documentation](validators.ipynb)."
    ]
   },
   {
@@ -145,21 +138,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding custom logic\n",
-    "You can also add custom functions for validating catalogs with the catalog_validator and event_validator decorators."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@obsplus.catalog_validator\n",
-    "def custom_checker(catalog):\n",
-    "    print('custom checker ran on catalog')\n",
-    "    \n",
-    "obsplus.validate_catalog(cat)"
+    "## Adding custom validators\n",
+    "See the [section on validators](validators.ipynb) to learn how to create your own validators. "
    ]
   }
  ],
