@@ -1,5 +1,5 @@
 """
-Functions that were too small to put into their own module
+General utility functions which are not specific to one data type.
 """
 
 import copy
@@ -439,7 +439,8 @@ def get_seed_id(obj: catalog_component) -> str:
             except (TypeError, AttributeError):
                 raise AttributeError(f"Unable to fetch a seed id for {obj.resource_id}")
     # If it makes it this far, it could not find a non-None attribute
-    raise AttributeError(f"Unable to fetch a seed id for {obj.resource_id}")
+    # raise assertion error so this still works in validators
+    assert 0, f"Unable to fetch a seed id for {obj.resource_id}"
 
 
 def _get_file_name_from_event(eve: Event, ext: str = ".xml") -> str:
