@@ -18,6 +18,11 @@ obsplus master:
       querying on channel (see #115).
   - obsplus.utils
     * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
+  - obsplus.validate
+    * Added the obsplus.validate module which contains a simple famework for
+      defining and running validators on python objects. Replaced the old
+      event validation (see #122).
+    * Added the validators created in (#64) to PR (#122).
 
 obsplus 0.0.2:
   - obsplus.bank
